--- a/app/views/users/user_index.html.erb
+++ b/app/views/users/user_index.html.erb
@@ -23,8 +23,7 @@
       </tr>
       <tr>
         <td>
-          <%= link_to "編集", "#", method: :delete,
-          class: "btn btn-primary"%>
+          <%= link_to "編集", edit_learner_info_user_path(user), remote: true, class: "btn btn-primary"%>
           <%= link_to "学習状況", "#", method: :delete,
           class: "btn btn-primary"%>
           <%= link_to "日報", "#", method: :delete,
@@ -35,3 +34,6 @@
   </table>
   <%= will_paginate %>
 </div>
+
+<!--モーダルウインドウ表示-->
+<div id="edit-learner-info" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
