--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -9,7 +9,7 @@
       </tr>
     </thead>
     <tr>
-      <%= link_to "新規コース作成", "#",class: "btn btn-primary"%>
+      <%= link_to "新規コース作成", new_lesson_path,class: "btn btn-primary"%>
     </tr>
     <% @lessons.each do |lesson| %>
       <tr>
@@ -24,7 +24,7 @@
       </tr>
       <tr>
         <td>
-          <%= link_to "学習コース編集", "#",class: "btn btn-primary"%>
+          <%= link_to "学習コース編集", edit_lesson_path(lesson.id),class: "btn btn-primary"%>
           <%= link_to "受講生編集", "#",class: "btn btn-primary"%>
         </td>
       </td>
