--- a/app/views/users/_edit_learner_info.html.erb
+++ b/app/views/users/_edit_learner_info.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">×</span>
+        <span aria-hidden="true">x</span>
       </button>
       <h1 class="modal-title">ユーザー編集</h1>
     </div>
