--- a/app/views/lessons/_userlesson_fields.html.erb
+++ b/app/views/lessons/_userlesson_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="nested-fields">
   <td>
-    <%= f.text_field :task_name %>
+    <%= f.collection_select(:user_id, User.all, :id, :name, include_blank: "選択して下さい") %>
     <% lesson_id = @lesson.id %>
   </td>
   <td>
