--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -5,17 +5,6 @@
   <%= form_with(model: @lesson, url: lesson_path, local: true, method: :patch) do |f| %>
     <%= f.text_field :lesson_name, class: 'form-control' %>
     <h4>タスク名</h4>
-      <% @lesson.tasks.each do |task| %>
-        <div>
-          <%= f.text_field :task_name, value: task.task_name %>
-          <td>
-          <%= link_to "削除", lessons_id_edit_task_id_path(id: task.id), method: :delete,
-              data: { confirm: "削除してよろしいですか？" },
-              class: "btn btn-danger" %>
-          </td>
-        </div>
-      <% end %>
-    <h5>新たに追加するタスク名</h5>
     <div class="tasks">
       <%= f.fields_for :tasks do |t| %>
         <%= render "task_fields", f: t %>
@@ -23,6 +12,15 @@
     </div>
     <div class="col-10 mx-auto mt-2">
       <%= link_to_add_association "追加ボタン", f, :tasks, class: "btn btn-success" %>
+    </div>
+    <h4>割り当てユーザ</h4>
+    <div class="userlessons">
+      <%= f.fields_for :userlessons do |t| %>
+        <%= render "userlesson_fields", f: t %>
+      <% end %>
+    </div>
+    <div class="col-10 mx-auto mt-2">
+      <%= link_to_add_association "追加ボタン", f, :userlessons, class: "btn btn-success" %>
     </div>
     <div class="actions">
       <%= f.submit "更新", class: "btn btn-primary btn-block btn-signup" %>
