--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'New Lessons') %>
 <h1>新規学習コース作成</h1>
 <div class="col-md-6 col-md-offset-3">
-  <h5>学習コース名</h5>
+  <h4>学習コース名</h4>
   <%= form_with(model: @lesson, url: lessons_path, local: true) do |f| %>
     <%= f.text_field :lesson_name, class: 'form-control' %>
-    <h5>タスク名</h5>
+    <h4>タスク名</h4>
     <div class="tasks">
       <%= f.fields_for :tasks do |t| %>
         <%= render "task_fields", f: t %>
@@ -13,6 +13,16 @@
     <div class="col-10 mx-auto mt-2">
       <%= link_to_add_association "追加ボタン", f, :tasks, class: "btn btn-success" %>
     </div>
+    <h4>受講者割り当て</h4>
+    <div class="user_lesson">
+      <%= f.fields_for :userlessons do |t| %>
+        <%= render "userlesson_fields", f: t %>
+      <% end %>
+    </div>
+    <div class="col-10 mx-auto mt-2">
+      <%= link_to_add_association "追加ボタン", f, :userlessons, class: "btn btn-success" %>
+    </div>
+
     <div class="actions">
       <%= f.submit "新規作成", class: "btn btn-primary btn-block btn-signup" %>
     </div>
