--- a/app/views/users/user_lesson.html.erb
+++ b/app/views/users/user_lesson.html.erb
@@ -22,7 +22,7 @@
     <div>
       <h4>
         学習時間
-      <%= link_to"学習時間詳細", "#", class: "btn btn-success"%>
+      <%= link_to"学習時間詳細", user_reports_path(user_id: @user.id), class: "btn btn-success"%>
       </h4>
     </div>
   </body>
